src/objects/MX_SB_SAC_CatalogoTipificacion__c.object
<CustomObject>
    <description>Contiene los registros para tipificar los casos</description>
    <fields>
        <fullName>MX_SB_SAC_CodigoCondusef__c</fullName>
        <description>Campo que contendrá la información de Conducef y que servirá para actualizar los registros de caso</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Código CONDUSEF</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_DescripcionCausaConducef__c</fullName>
        <description>Campo que contendrá la información de Conducef y que servirá para actualizar los registros de caso</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción causa CONDUSEF</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Detalle__c</fullName>
        <description>Campo que contendrá los mismos detalles de caso y que servirá para el cruce y actualizar los registros de caso</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Detalle</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_DocumentacionRequerida__c</fullName>
        <description>Campo que contendrá la información de Conducef y que servirá para actualizar los registros de caso</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Documentación requerida</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Estatus__c</fullName>
        <description>Campo que contendrá los mismos estatus de caso y se ocupara actualizar los registros de caso</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estatus</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Etapa__c</fullName>
        <description>Campo que se ocupara para actualizar la etapa en el caso, cuando se cumplan los criterios correspondientes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Etapa</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_InformacionAdicional__c</fullName>
        <description>Campo que contendrá la misma Información adicional de caso y que servirá para el cruce y actualizar los registros de caso</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Información adicional</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Motivo__c</fullName>
        <description>Campo que alojara los motivos que se ocupan en caso, con el fin de realizar el match al momento de autenticar</description>
        <label>Motivo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cambios con afectación de primas</fullName>
                    <default>true</default>
                    <label>Cambios con afectación de primas</label>
                </value>
                <value>
                    <fullName>Cambios sin afectación de primas</fullName>
                </value>
                <value>
                    <fullName>Cancelación</fullName>
                </value>
                <value>
                    <fullName>Consultas</fullName>
                </value>
                <value>
                    <fullName>Cotización</fullName>
                </value>
                <value>
                    <fullName>Devolución</fullName>
                </value>
                <value>
                    <fullName>Incidencia</fullName>
                </value>
                <value>
                    <fullName>Reactivación</fullName>
                </value>
                <value>
                    <fullName>Reclamación</fullName>
                </value>
                <value>
                    <fullName>Retención</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Transferencia</fullName>
                </value>
                <value>
                    <fullName>Venta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>campo que traerá la relación del producto existente</description>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Catálogos de tipificaciones</relationshipLabel>
        <relationshipName>Catalogos_de_tipificaciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_ProductosParaVenta__c</fullName>
        <description>Campo que concatenara la información del motivo mas producto, se ocupara para el llenado de producto para venta que vive en el objeto caso</description>
        <formula>TEXT(MX_SB_SAC_Motivo__c)&amp;&quot; &quot;&amp;MX_SB_SAC_Producto__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Productos para venta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Subdetalle__c</fullName>
        <description>Campo que contendrá los mismos subdetalles de caso y que servirá para el cruce y actualizar los registros de caso</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subdetalle</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_TipoDeRegistro__c</fullName>
        <description>Se ocupara para la identificación del tipo de registro que se ocupara caso</description>
        <label>Tipo de registro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Vida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Catálogo de tipificación</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MX_SB_SAC_Motivo__c</columns>
        <columns>MX_SB_SAC_Detalle__c</columns>
        <columns>MX_SB_SAC_Subdetalle__c</columns>
        <columns>MX_SB_SAC_InformacionAdicional__c</columns>
        <columns>MX_SB_SAC_Producto__c</columns>
        <columns>MX_SB_SAC_ProductosParaVenta__c</columns>
        <columns>MX_SB_SAC_TipoDeRegistro__c</columns>
        <columns>MX_SB_SAC_CodigoCondusef__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MX_SB_SAC_Motivo__c</field>
            <operation>equals</operation>
            <value>Consultas</value>
        </filters>
        <filters>
            <field>MX_SB_SAC_Producto__c</field>
            <operation>equals</operation>
            <value>VW Venta Sin Crédito</value>
        </filters>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_CambioConAfectPrimasConDOCBO3_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Cambio Con Afectación Primas Con DOC BO3</label>
        <queue>MX_SB_SAC_CambioConAfectPrimasConDOCBO3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_CambioConAfectPrimasSinDOCBO3_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Cambio Con Afectación Primas Sin DOC BO3</label>
        <queue>MX_SB_SAC_CambioConAfectPrimasSinDOCBO3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_CambioSinAfectPrimasConDOCBO3_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Cambio Sin Afectación Primas Con DOC BO3</label>
        <queue>MX_SB_SAC_CambioSinAfectPrimasConDOCBO3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_CambioSinAfectPrimasSinDOCBO3_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Cambio Sin Afectación Primas Sin DOC BO3</label>
        <queue>MX_SB_SAC_CambioSinAfectPrimasSinDOCBO3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_CancelacionConDocumentosBO2_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Cancelación con documentos BO2</label>
        <queue>MX_SB_SAC_CancelacionConDocumentosBO2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_CancelacionConDocumentosBO3_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Cancelación con documentos BO3</label>
        <queue>MX_SB_SAC_CancelacionConDocumentosBO3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_CancelacionSinDocumentosBO2_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Cancelación sin documentos BO2</label>
        <queue>MX_SB_SAC_CancelacionSinDocumentosBO2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_DevolucionConDocumentosBO3_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Devolución con documentos BO3</label>
        <queue>MX_SB_SAC_DevolucionConDocumentosBO3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_DevolucionSinDocumentosBO3_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Devolución sin documentos BO3</label>
        <queue>MX_SB_SAC_DevolucionSinDocumentosBO3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_IncidenciasBON3_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Incidencias BON3</label>
        <queue>MX_SB_SAC_IncidenciasBON3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_PagoCIEBO2_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Pago CIE BO2</label>
        <queue>MX_SB_SAC_PagoCIEBO2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_ReactivacionConDocumentosBO3_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Reactivación con documentos BO3</label>
        <queue>MX_SB_SAC_ReactivacionConDocumentosBO3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_ReactivacionSinDocumentosBO3_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Reactivación sin documentos BO3</label>
        <queue>MX_SB_SAC_ReactivacionSinDocumentosBO3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_SB_SAC_ReclamacionesMultiasistencia_MX_SB_SAC_CatalogoTipificacion</fullName>
        <filterScope>Queue</filterScope>
        <label>Reclamaciones Multiasistencia</label>
        <queue>MX_SB_SAC_ReclamacionesMultiasistencia</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre Catálogo de tipificación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catálogos de tipificaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>